--- a/templates/registration/settings.html
+++ b/templates/registration/settings.html
@@ -46,11 +46,12 @@
           {% else %}
           <a href="{% url 'get_started' %}" class="btn btn-small btn-primary float-right" >Join</a>
           {% endif %}
-        <br>
+        <br><br>
         <hr>
         <p>Contact Us</p>
         <ul class="list-unstyled mt-3 mb-4">
             <p>(646) 821-2588</p>
+            <p>support@coronaconfront.com</p>
         </ul>
         </ul>
       </div>
