social share button

--- a/templates/plans/base.html
+++ b/templates/plans/base.html
@@ -25,6 +25,15 @@
     } );
     </script>
     {% block stylesheet %}{% endblock %}
+
+  <script type="text/javascript">
+    if (/Android|webOS|iPhone|iPad|iPod|pocket|psp|kindle|avantgo|blazer|midori|Tablet|Palm|maemo|plucker|phone|BlackBerry|symbian|IEMobile|mobile|ZuneWP7|Windows Phone|Opera Mini/i.test(navigator.userAgent)){
+     window.onload = function (){
+         document.getElementById('content-desktop').style.display = 'none';
+     }
+   };
+</script>
+
   </head>
   <body>
   {% block body %}
