--- a/templates/plans/home.html
+++ b/templates/plans/home.html
@@ -10,7 +10,32 @@
     <br><br>
     Given low mortality and high infection rates, this model allows for the society to support families of the least lucky ones.</p> <br> <br> <br>
   <a href="{% url 'get_started' %}"><button type="button" class="btn btn-lg btn-primary">Get Started </button></a> <br> <br> <br> <br>
-{#  <a href="{% url 'get_started' %}"><button type="button" class="btn btn-lg btn-primary">Share</button></a>#}
+
+<div id="content-desktop">
+    <a href="https://www.facebook.com/sharer/sharer.php?u=https://coronaconfront.com/"><img src = "/static/facebook.png" id="facebook" height="42" width="42"></a>
+
+    <a href="http://www.reddit.com/submit?url=https://coronaconfront.com/&title=Help%20each%20other%20protect%20against%20high%20deductibles%20during%20coronavirus%20pandemic!"><img src = "/static/reddit.png" id="reddit" height="42" width="42"></a>
+
+    <a href="https://mail.google.com/mail/?view=cm&su=Help%20each%20other%20protect%20against%20high%20deductibles%20during%20coronavirus%20pandemic!&body=www.coronaconfront.com"><img src = "/static/gmail.png" id="gmail" height="42" width="42"></a>
+
+    <a href="http://compose.mail.yahoo.com/?subject=Help%20each%20other%20protect%20against%20high%20deductibles%20during%20coronavirus%20pandemic!&body=www.coronaconfront.com"><img src = "/static/yahoo.png" id="yahoo" height="42" width="42"></a>
+</div>
+
+
+
+{#<a href="https://wa.me/?text=">Share on WhatsApp</a>#}
+{##}
+{#<a href="sms:?body=">Share on SMS</a>#}
+
+{#<a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=CoronaConfront.com%0AHelp%20each%20other%20protect%20against%20high%20deductibles%20during%20coronavirus%20pandemic!">#}
+{#Share on Twitter#}
+{#</a>#}
+
+{#<script src="https://platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>#}
+{#<script type="IN/Share" data-url="https://www.coronaconfront.com"></script>#}
+
+</div>
+
 </div>
 
 {#<div class="container">#}
@@ -24,4 +49,11 @@
 {#    {% endfor %}#}
 {#  </ul>#}
 {#</div>#}
+
+{#<script>#}
+{#     var mobile = (/iphone|ipod|android|blackberry|mini|windows\sce|palm/i.test(navigator.userAgent.toLowerCase()));#}
+{#     if (mobile === false) {$('.content-desktop').hide();}#}
+{#</script>#}
+
+
 {% endblock %}
