--- a/templates/plans/home.html
+++ b/templates/plans/home.html
@@ -1,4 +1,5 @@
 {% extends 'plans/base.html' %}
+{% load static %}
 
 {% block content %}
 
@@ -12,13 +13,13 @@
     Given low mortality and high infection rates, this model allows for the society to support families of the least lucky ones.</p> <br> <br> <br>
   <a href="{% url 'get_started' %}"><button type="button" class="btn btn-lg btn-primary">Get Started </button></a> <br> <br> <br> <br>
 
-  <a href="https://www.facebook.com/sharer/sharer.php?u=https://coronaconfront.com/"><img src="/static/facebook.png" height="42" width="42"></a>
+  <a href="https://www.facebook.com/sharer/sharer.php?u=https://coronaconfront.com/"><img src="{% static "facebook.png" %}" id="facebook" height="42" width="42"></a>
 
-  <a href="http://www.reddit.com/submit?url=https://coronaconfront.com/&title=Help%20each%20other%20protect%20against%20high%20deductibles%20during%20coronavirus%20pandemic!"><img src = "/static/reddit.png" id="reddit" height="42" width="42"></a>
+  <a href="http://www.reddit.com/submit?url=https://coronaconfront.com/&title=Help%20each%20other%20protect%20against%20high%20deductibles%20during%20coronavirus%20pandemic!"><img src="{% static "reddit.png" %}" id="reddit" height="42" width="42"></a>
 
-  <a href="https://mail.google.com/mail/?view=cm&su=Help%20each%20other%20protect%20against%20high%20deductibles%20during%20coronavirus%20pandemic!&body=www.coronaconfront.com"><img src = "/static/gmail.png" id="gmail" height="42" width="42"></a>
+  <a href="https://mail.google.com/mail/?view=cm&su=Help%20each%20other%20protect%20against%20high%20deductibles%20during%20coronavirus%20pandemic!&body=www.coronaconfront.com"><img src="{% static "gmail.png" %}" id="gmail" height="42" width="42"></a>
 
-  <a href="http://compose.mail.yahoo.com/?subject=Help%20each%20other%20protect%20against%20high%20deductibles%20during%20coronavirus%20pandemic!&body=www.coronaconfront.com"><img src = "/static/yahoo.png" id="yahoo" height="42" width="42"></a><br>
+  <a href="http://compose.mail.yahoo.com/?subject=Help%20each%20other%20protect%20against%20high%20deductibles%20during%20coronavirus%20pandemic!&body=www.coronaconfront.com"><img src="{% static "yahoo.png" %}" id="yahoo" height="42" width="42"></a><br>
 <br>  <h3>Share Buttons</h3>
 
 
