changed to deductible

--- a/templates/plans/get_started.html
+++ b/templates/plans/get_started.html
@@ -3,8 +3,8 @@
 {% block content %}
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
   <h1 class="display-5">Current Membership Plans</h1>
-{#  <p class="lead">The eligiblity requirement is existing medical coverage through a US insurer</p>#}
-  <p class="lead">Cremation from Solacecares.com costs $895 and we'll reimburse up to 100% of this amount.</p>
+  <p class="lead">The eligiblity requirement is existing medical coverage through a US insurer</p>
+{#  <p class="lead">Cremation from Solacecares.com costs $895 and we'll reimburse up to 100% of this amount.</p>#}
 </div>
 
 <div class="container">
