--- a/templates/plans/home.html
+++ b/templates/plans/home.html
@@ -5,12 +5,11 @@
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
   <h1 class="display-4">Corona Confront</h1>
-<br><br>{#  <p class="lead">Many insured people in America still have to pay deductibles if they get coronavirus and require hospital stays.#}
-{#  <p class="lead">We decided to form a membership organization that reimburses deductibles of hospitalized members up to 100%.</p>#}
-  <p class="lead">Cremation is becoming a more acceptable service due to coronavirus.<br>
-  <p class="lead">We decided to form a membership organization that reimburses cremation services if your loved one is lost to coronavirus.
-    <br><br>
-    Given low mortality and high infection rates, this model allows for the society to support families of the least lucky ones.</p> <br> <br> <br>
+<br><br><p class="lead">Many insured people in America still have to pay deductibles if they get coronavirus and require hospital stays.<br>
+  <p class="lead">We decided to form a membership organization that reimburses deductibles of hospitalized members up to 100%.</p>
+{#  <p class="lead">Cremation is becoming a more acceptable service due to coronavirus.<br>#}
+{#  <p class="lead">We decided to form a membership organization that reimburses cremation services if your loved one is lost to coronavirus.#}
+    <p class="lead">Given low mortality and high infection rates, this model allows for the society to support families of the least lucky ones.</p> <br> <br> <br>
   <a href="{% url 'get_started' %}"><button type="button" class="btn btn-lg btn-primary">Get Started </button></a> <br> <br> <br> <br>
 
   <a href="https://www.facebook.com/sharer/sharer.php?u=https://coronaconfront.com/"><img src="{% static "facebook.png" %}" id="facebook" height="42" width="42"></a>
