--- a/templates/registration/new_insurance.html
+++ b/templates/registration/new_insurance.html
@@ -14,8 +14,8 @@
   <div class="card-deck mb-3 text-center">
     <div class="card mb-4 shadow-sm">
       <div class="card-header">
-{#        <h4 class="my-0 font-weight-normal">Do you have medical insurance for the next 3 months?</h4>#}
-        <h4 class="my-0 font-weight-normal">Have you already been hospitalized due to coronavirus?</h4>
+        <h4 class="my-0 font-weight-normal">Do you have medical insurance for the next 3 months?</h4>
+{#        <h4 class="my-0 font-weight-normal">Have you already been hospitalized due to coronavirus?</h4>#}
       </div>
       <div class="card-body">
         <ul class="list-unstyled mt-3 mb-4">
@@ -36,7 +36,7 @@
 
 <script>
 $('#id_insurance_exists').on('change',function(){
-    if( $(this).val()==="NO"){
+    if( $(this).val()==="YES"){
     $("#insurance_yes").show()
     $("#insurance_no").hide()
     }
