--- a/templates/plans/base.html
+++ b/templates/plans/base.html
@@ -17,7 +17,7 @@
     <script scr=https://js.stripe.com/v3/"></script>
     <script>
     $( function() {
-      $( "#id_hosp_date" ).datepicker({ minDate: '-20', changeMonth: true, maxDate: '300'});
+      $( "#id_hosp_date" ).datepicker({ minDate: '0', changeMonth: true, maxDate: '300'});
     } );
 
       $( function() {
@@ -35,7 +35,7 @@
       <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="{% url 'get_started' %}">Get Started</a>
         {% if user.is_authenticated %}
-        <a class="p-2 text-dark" href="{% url 'reimburse' %}">Support Me</a>
+        <a class="p-2 text-dark" href="{% url 'reimburse' %}">Reimburse Me</a>
         <a class="p-2 text-dark" href="{% url 'settings' %}">Settings</a>
         <a class="p-2 text-dark" href="{% url 'logout' %}">Log Out</a>
         {% else %}
