--- a/templates/registration/reimburse.html
+++ b/templates/registration/reimburse.html
@@ -4,7 +4,7 @@
 
 </div>
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-  <h1 class="display-5">Support Me</h1>
+  <h1 class="display-5">Reimburse Me</h1>
   <p class="lead"></p>
 </div>
 
