--- a/templates/plans/home.html
+++ b/templates/plans/home.html
@@ -6,24 +6,12 @@
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
   <h1 class="display-4">Corona Confront</h1>
 <br><br><p class="lead">Many insured people in America still have to pay deductibles if they get coronavirus and require hospital stays.<br>
-  <p class="lead">We decided to form a membership organization that reimburses deductibles of hospitalized members up to 100%.</p>
+  <p class="lead">We decided to form a membership organization that reimburses deductibles of hospitalized members up to 100%.</p> <br>
 
   <a href="{% url 'get_started' %}"><button type="button" class="btn btn-lg btn-primary">Get Started </button></a> <br> <br> <br> <br>
 
-<div class="container">
 
-  <h3>Trending Articles</h3>
-  <ul>
-
-      <embed src="https://www.google.com" style="width:500px; height: 300px;">
-{#    {% for plan in plans.all %}#}
-{##}
-{#    <li><a href="{% url 'plan' plan.id %}">{{ plan.title }}</a></li>#}
-{##}
-{#    {% endfor %}#}
-  </ul>
-</div>
-
+<br> <br> <br> <br>
 
   <a href="https://www.facebook.com/sharer/sharer.php?u=https://coronaconfront.com/"><img src="{% static "facebook.png" %}" id="facebook" height="42" width="42"></a>
 
@@ -32,12 +20,20 @@
   <a href="https://mail.google.com/mail/?view=cm&su=Help%20each%20other%20protect%20against%20high%20deductibles%20during%20coronavirus%20pandemic!&body=www.coronaconfront.com"><img src="{% static "gmail.png" %}" id="gmail" height="42" width="42"></a>
 
   <a href="http://compose.mail.yahoo.com/?subject=Help%20each%20other%20protect%20against%20high%20deductibles%20during%20coronavirus%20pandemic!&body=www.coronaconfront.com"><img src="{% static "yahoo.png" %}" id="yahoo" height="42" width="42"></a><br>
-<br>  <h3>Share Buttons</h3>
+<br> <h3>Share Buttons</h3>
 
 
 </div>
+<br><br>
+
+<div class="container">
+
+<h3 align="center">Why we need Corona Confront now?</h3>
 
 
+    <iframe src="https://www.nationalmemo.com/why-all-americans-still-cant-get-free-coronavirus-treatment/" width=1000 height=700" sandbox=""></iframe>
+
+</div>
 
 
 
