home page changed

--- a/templates/plans/checkout.html
+++ b/templates/plans/checkout.html
@@ -29,9 +29,8 @@
             src="https://checkout.stripe.com/checkout.js" class="stripe-button"
             data-key="pk_test_QQSrVpvVW8GrTBDOJa7H6EIt00WC2blhPZ"
             data-amount="{{ price }}"
-            data-name="Nick Fitness, LLC"
+            data-name="Corona Confront"
             data-email="{{ user.email }}"
-            data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
             data-locale="auto">
           </script>
           <input type="hidden" value="{{ plan }}" name="plan" />
@@ -40,6 +39,7 @@
         </div>
       </div>
       </div>
+
 
 
 
