--- a/templates/plans/join.html
+++ b/templates/plans/join.html
@@ -3,8 +3,7 @@
 {% block content %}
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
   <h1 class="display-5">Corona Confront Membership</h1>
-{#  <p class="lead"></p>#}
-{#  <p class="lead">Cremation from Solacecares.com costs $895 and we'll reimburse up to 100% of this amount.</p>#}
+  <p class="lead">All subscriptions will end when the US government declares the coronavirus outbreak to be over.</p>
 </div>
 
 <div class="container">
@@ -30,7 +29,7 @@
         <ul class="list-unstyled mt-3 mb-4">
           <li></li>
         </ul>
-        <a href="{% url 'checkout' %}?plan=yearly"><button type="button" class="btn btn-lg btn-block btn-primary">Enroll</button></a>
+        <a href="{% url 'checkout' %}?plan=3monthly"><button type="button" class="btn btn-lg btn-block btn-primary">Enroll</button></a>
       </div>
     </div>
   </div>
