--- a/templates/registration/emergency_profile.html
+++ b/templates/registration/emergency_profile.html
@@ -20,7 +20,7 @@
               {% csrf_token %}
               {{ form.as_p }}
               <input type="submit" value="Save" class="btn btn-lg btn-primary float-right">
-              <a href="{% url 'settings' %}"><button type="button" class="btn btn-lg btn-danger float-left">Quit</button></a>
+              <a href="{% url 'settings' %}"><button type="button" class="btn btn-lg btn-danger float-left">Back</button></a>
             </form>
         </ul>
       </div>
