--- a/templates/registration/new_insurance.html
+++ b/templates/registration/new_insurance.html
@@ -14,7 +14,7 @@
   <div class="card-deck mb-3 text-center">
     <div class="card mb-4 shadow-sm">
       <div class="card-header">
-        <h4 class="my-0 font-weight-normal">Do you have medical insurance for the next 3 months?</h4>
+        <h4 class="my-0 font-weight-normal">Do you have medical insurance for the next 3 months? (yes to proceed)</h4>
 {#        <h4 class="my-0 font-weight-normal">Have you already been hospitalized due to coronavirus?</h4>#}
       </div>
       <div class="card-body">
