--- a/templates/registration/cancel_insurance.html
+++ b/templates/registration/cancel_insurance.html
@@ -11,7 +11,7 @@
   <div class="card-deck mb-3 text-center">
     <div class="card mb-4 shadow-sm">
       <div class="card-header">
-        <h4 class="my-0 font-weight-normal">Are you sure to cancel after your current billing cycle {{ last_day_show |default_if_none:"" }} ?</h4>
+        <h4 class="my-0 font-weight-normal">Are you sure to cancel your subscription after {{ last_day_show |default_if_none:"current billing cycle" }} ?</h4>
       </div>
       <div class="card-body">
         <ul class="list-unstyled mt-3 mb-4">
