--- a/templates/registration/account_activation_sent.html
+++ b/templates/registration/account_activation_sent.html
@@ -1,5 +1,5 @@
 {% extends 'plans/base.html' %}
 
 {% block content %}
-  <p>Please confirm your email address to complete the registration. If it doesn't appear within a few minutes, check your spam folder. </p>
+  <p>Please confirm to complete the registration. If it doesn't appear within a few minutes, check your spam folder. </p>
 {% endblock %}
