--- a/templates/plans/checkout.html
+++ b/templates/plans/checkout.html
@@ -30,6 +30,7 @@
             data-key="pk_live_FqEci7lCGv1T0M2GcErtoOXq00nBeeeDgM"
             data-amount="{{ price }}"
             data-name="Corona Confront"
+            data-email="{{ user.email }}"
             data-locale="auto">
           </script>
           <input type="hidden" value="{{ plan }}" name="plan" />
