--- a/templates/registration/account_activation_email.html
+++ b/templates/registration/account_activation_email.html
@@ -4,4 +4,8 @@ Hi {{ user.first_name }},
 Please click on the link below to confirm your registration:
 
 http://{{ domain }}{% url 'activate' uidb64=uid token=token %}
+
+Thanks,
+Corona Confront Team
+
 {% endautoescape %}
