--- a/templates/plans/home.html
+++ b/templates/plans/home.html
@@ -5,8 +5,8 @@
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
   <h1 class="display-4">Corona Confront</h1>
-<br><br><p class="lead">Many insured people in America still have to pay deductibles if they get coronavirus and require hospital stays.<br><br>
-  <p class="lead">We decided to form a membership organization that reimburses deductibles of hospitalized members up to 100%.</p> <br><br>
+<br><br><p class="lead">Although testing is free, many insured people in America still have to pay deductibles if they get coronavirus and require hospital stays.<br><br>
+  <p class="lead">We decided to form a membership nonprofit that reimburses deductibles of members hospitalized due to coronavirus.</p> <br><br>
 
   <a href="{% url 'get_started' %}"><button type="button" class="btn btn-lg btn-primary">Get Started </button></a> <br> <br> <br> <br>
 
@@ -15,14 +15,6 @@
 </div>
 <br><br>
 
-<div class="container">
-
-<h2  align="center">Why do we need Corona Confront now?</h2>
-<br>
-
-    <iframe src="https://www.nationalmemo.com/why-all-americans-still-cant-get-free-coronavirus-treatment/" width=900 height=700" sandbox=""></iframe>
-
-</div>
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
 
