--- a/templates/plans/home.html
+++ b/templates/plans/home.html
@@ -10,12 +10,19 @@
 
   <a href="{% url 'get_started' %}"><button type="button" class="btn btn-lg btn-primary">Get Started </button></a> <br> <br> <br> <br>
 
-<br> <br> <br> <br>
+ <br>
 
 </div>
 <br><br>
 
+<br>
 
+<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+
+<img src="{% static "graph.jpeg" %}" width=100% height=auto"></img>
+
+</div>
+<br>
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
 
   <a href="https://www.facebook.com/sharer/sharer.php?u=https://coronaconfront.com/"><img src="{% static "facebook.png" %}" id="facebook" height="62" width="62"></a> &nbsp;
