--- a/templates/registration/reimburse.html
+++ b/templates/registration/reimburse.html
@@ -13,7 +13,7 @@
   <div class="card-deck mb-3 text-center">
     <div class="card mb-4 shadow-sm">
       <div class="card-header">
-        <h4 class="my-0 font-weight-normal">Your data is your property. We need it to send you a check.</h4>
+        <h4 class="my-0 font-weight-normal">Your data is your property. We need it just to send you a check.</h4>
       </div>
       <div class="card-body">
         <ul class="list-unstyled mt-3 mb-4">
