--- a/templates/plans/get_started.html
+++ b/templates/plans/get_started.html
@@ -4,8 +4,8 @@
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
   <h1 class="display-5">Perfect Ratio</h1> <br>
     <p class="lead">We aim for a ratio of 150 non-hospitalized to 1 hospitalized member.</p>
-    <p class="lead">If we reach the ratio, the deductible for 1 hospitalized person is fully reimbursed from 150 contributions.</p>
-    <p class="lead">If we don't reach the ratio, partial reimbursement will still help hospitalized members.</p>
+    <p class="lead">If we reach the ratio, we'll send you a check worth your full deductible cost.</p>
+    <p class="lead">If we don't reach the ratio, hospitalized members will still benefit from partial reimbursement.</p>
 {#    <p class="lead">Given low mortality and high infection rates, this model allows for the society to support families of the least lucky ones.</p> <br>#}
 
 </div>
